feat(tarnished): enhance BFS scoring strategy and update UI components for target selection